--- a/SAVI/SAVI/Views/Pay2Bank.xaml
+++ b/SAVI/SAVI/Views/Pay2Bank.xaml
@@ -11,7 +11,7 @@
 
             <Label x:Name="textBalance"    TextColor="Black"  BackgroundColor="#f2f2f2" />
             <Label x:Name="textMinimum"     TextColor="Black" BackgroundColor="#f2f2f2" />
-            <Entry x:Name="editAmount" Placeholder="Please enter an Amount!" BackgroundColor="#f2f2f2" TextColor="Black"/>
+            <Entry x:Name="editAmount" Placeholder="Please enter an amount" BackgroundColor="#f2f2f2" TextColor="Black"/>
             <Button x:Name="buttonPay" Text="Pay" Clicked="buttonPay_Clicked" FontSize="Medium"  BorderWidth="1" TextColor="White" BackgroundColor="#01aef0" CornerRadius="10"
                                 ios:VisualElement.ShadowColor="Gray"
                                 ios:VisualElement.ShadowOpacity="0.7"
