--- a/SAVI/SAVI/Views/Airtime2.xaml
+++ b/SAVI/SAVI/Views/Airtime2.xaml
@@ -20,7 +20,7 @@
             <Picker Margin="0,30,0,0" x:Name="DataBoundlePicker" Title="Select Data Bundles" TitleColor="Black" ItemsSource="{Binding GetProductResponseDataBundles}" SelectedIndexChanged="DataBounblePicker_SelectedIndexChanged"  ItemDisplayBinding="{Binding TSSProductBundleName}" SelectedItem="{Binding SelectedBundle}" BackgroundColor="#01aef0">
 
             </Picker>
-            <Entry Margin="0,30,0,0" x:Name="AirtimeAmountEntry" Placeholder="Please enter an Amount!" BackgroundColor="#f2f2f2" TextColor="Black" Keyboard="Numeric"/>
+            <Entry Margin="0,30,0,0" x:Name="AirtimeAmountEntry" Placeholder="Please enter an amount" BackgroundColor="#f2f2f2" TextColor="Black" Keyboard="Numeric"/>
             <Button Margin="0,30,0,0" x:Name="FinishButton"    ios:VisualElement.IsShadowEnabled="true" BackgroundColor="#01aef0" CornerRadius="10" TextColor="White" FontAttributes="Bold" FontSize="Medium" HeightRequest="40" WidthRequest="60" 
                                 ios:VisualElement.ShadowColor="Gray"
                                 ios:VisualElement.ShadowOpacity="0.7"
