--- a/SAVI/SAVI/Views/login.xaml
+++ b/SAVI/SAVI/Views/login.xaml
@@ -50,7 +50,21 @@
                             </ios:VisualElement.ShadowOffset>
 
                         </Entry>
-                        <Entry x:Name="editTextPassword" Placeholder="Password" IsPassword="True" FlexLayout.AlignSelf="Stretch" BackgroundColor="#f2f2f2" TextColor="Black"/>
+                        <Entry x:Name="editTextPassword"  ios:VisualElement.IsShadowEnabled="true"
+                                ios:VisualElement.ShadowColor="Gray"
+                                ios:VisualElement.ShadowOpacity="0.7"
+                                ios:VisualElement.ShadowRadius="10"
+                                android:VisualElement.Elevation="10"
+                                android:Button.UseDefaultShadow="True" Placeholder="Password" IsPassword="True" FlexLayout.AlignSelf="Stretch" BackgroundColor="#f2f2f2" TextColor="Black">
+                            <ios:VisualElement.ShadowOffset>
+                                <Size>
+                                    <x:Arguments>
+                                        <x:Double>10</x:Double>
+                                        <x:Double>10</x:Double>
+                                    </x:Arguments>
+                                </Size>
+                            </ios:VisualElement.ShadowOffset>
+                        </Entry>
                         <Grid FlexLayout.AlignSelf="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="10*"/>
