--- a/SAVI/SAVI/Views/Main.xaml
+++ b/SAVI/SAVI/Views/Main.xaml
@@ -35,7 +35,12 @@
                                                 AbsoluteLayout.LayoutFlags=
                                                 "PositionProportional"
                                                 HorizontalOptions="Center">
-                                <Image Source="{Binding .}" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                <Image Source="{Binding .}" HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer
+                                          Tapped="TapGestureRecognizer_Tapped" />
+                                    </Image.GestureRecognizers>
+                                </Image>
                             </StackLayout>
                         </AbsoluteLayout>
                     </DataTemplate>
