--- a/SAVI/SAVI/Views/Electricity.xaml
+++ b/SAVI/SAVI/Views/Electricity.xaml
@@ -12,7 +12,7 @@
 
             </Picker>
 
-            <Entry x:Name="editMeter" Placeholder="Please enter a meter number" BackgroundColor="#f2f2f2" TextColor="Black"/>
+            <Entry x:Name="editMeter" Placeholder="Please enter a meter number" BackgroundColor="#f2f2f2" TextColor="Black" Keyboard="Numeric"/>
             <Entry x:Name="editAmount" Placeholder="Please enter an amount" BackgroundColor="#f2f2f2" TextColor="Black" Keyboard="Numeric"/>
             <Button x:Name="buttonNext" 
                     
